# ateco

./: .cursorignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  exec_bump-major.bat  exec_bump-minor.bat  exec_bump-patch.bat  index.html  mkdocs.yml  pyproject.toml  runtests.py  sitemap.xml  tox.ini
.github/: SECURITY.md  dependabot.yaml
.github/workflows/: ci.yaml
community/contributing/: index.html
docs/: index.md
docs/community/: contributing.md
news/: 0001.trivial.rst
search/: search_index.json
src/ateco/: __init__.py  _api.py  _codes.py  _load.py
src/ateco/data/: editions.json  provenance.json
src/ateco/data/2007/: nodes.json
src/ateco/data/2022/: nodes.json
src/ateco/data/2025/: nodes.json
src/ateco/data/correspondence/: 2025_2022.json
tests/: test_ateco.py
tools/: build_data.py
